# esp-microcontroller

./: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
components/blufi/: CMakeLists.txt
components/blufi/include/: blufi.h
components/blufi/src/: blufi_init.c  blufi_main.c  blufi_security.c
components/http_client/: CMakeLists.txt
components/http_client/include/: http_client.h
components/http_client/src/: http_client.c
components/i2c_sensor/: CMakeLists.txt  Kconfig.projbuild
components/i2c_sensor/include/: i2c_sensor.h
components/i2c_sensor/src/: i2c_sensor.c
components/pulse_counter/: CMakeLists.txt
components/pulse_counter/include/: pulse_counter.h
components/pulse_counter/src/: pulse_counter.c
main/: main.c
